# bevy-playground

./: Cargo.toml
src/: animated_sprite.rs  card.rs  enemy.rs  game.rs  grid.rs  grid_highlight.rs  healthbar.rs  layout.rs  main.rs  mouse.rs  notification.rs  press.rs  scale_on_touch.rs  score.rs  simple_button.rs  styles.rs  tooltip.rs  tooltip_on_touch.rs  touch.rs
src/card/: mod.rs  tasks.rs
src/card/actions/: mod.rs
src/card/cards/: crocodile.rs  diamond.rs  mod.rs  river.rs
src/core/: mod.rs  press.rs  touch.rs
