[package]
name = "connect-three"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
rand_core = "0.9"
rand = "0.9"
bevy_rand = { version = "0.12", features = ["wyrand"] }
bevy-inspector-egui = "0.34.0"
bevy_egui = "0.37.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

